# CnCpp

./: CMakeLists.txt  define.cmake  main.cpp
srvcli/: CMakeLists.txt
srvcli/inc/: unp.h
srvcli/src/: cli.cpp  comm.cpp  srv.cpp
